tests/baselines/reference/parserRegularExpressionDivideAmbiguity5.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts(1,1): error TS2304: Cannot find name 'model'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts(1,17): error TS2304: Cannot find name 'rotateY'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts(1,42): error TS2304: Cannot find name 'rotateZ'.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity5.ts (3 errors) ====
    model.rotate(0, rotateY * Math.PI / 180, rotateZ * Math.PI / 180);
    ~~~~~
!!! error TS2304: Cannot find name 'model'.
                    ~~~~~~~
!!! error TS2304: Cannot find name 'rotateY'.
                                             ~~~~~~~
!!! error TS2304: Cannot find name 'rotateZ'.